--- a/config/database.yml
+++ b/config/database.yml
@@ -15,10 +15,10 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password:
-  socket: /tmp/mysql.sock
 
 development:
   <<: *default
+  host: localhost
   database: protospace_39844_development
 
 # Warning: The database defined as "test" will be erased and
@@ -26,6 +26,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  host: localhost
   database: protospace_39844_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -50,6 +51,5 @@ test:
 #
 production:
   <<: *default
-  database: protospace_39844_production
-  username: protospace_39844
-  password: <%= ENV["PROTOSPACE_39844_DATABASE_PASSWORD"] %>
+  adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
